servicemesh/02_canary/frontend-2.0.0-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: training
  name: frontend-2.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: 2.0.0
  template:
    metadata:
      labels:
        app: frontend
        version: 2.0.0
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: frontend
        image: eu.gcr.io/loodse-training-playground/loodse-training/frontend:2.0.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
