servicemesh/02_canary/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: helloworld
  subsets:
    - name: v1
      labels:
        version: 1.0.0
    - name: v2
      labels:
         version: 1.0.0
