servicemesh/02_canary/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: default  
  name: frontend
spec:
  hosts:
      - "*"
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: frontend.default.svc.cluster.local
          subset: v1
        port:
          number: 8080
        weight: 90
      - destination:
          host: frontend.default.svc.cluster.local
          subset: v2          
        port:
            number: 8080
        weight: 10
